--- a/style.css
+++ b/style.css
@@ -4,20 +4,51 @@ body{
     h1{
         font-size: 50px;
     }
+    h2{
+        font-size: 30px;
+    }
         .color{
                 color: orange;
         }
-            section{
+           .flexible-container{
                 display: flex;
                 margin-bottom: 150px;
             }
                 .janker{
                     width: 50%;
                     padding-left: 2%;
-                    padding-right: 8%;
+                    padding-right: 2%;
                     padding-bottom: 7%;
+                    border-radius: 5px;
+                    border-color: rgb(103, 121, 5);
+                    
                     
                 }
+                .janker-b{
+                    width: 42%;
+                    margin-left: 7%;
+                    margin-right: 5%;
+                    padding: 10px;
+                    border-left: 7px solid;
+                    border-image: linear-gradient(salmon, tomato);
+                    border-image-slice: 1;
+                    box-shadow: 10px 10px 40px gray;
+                    border-radius: 20px;
+
+                    
+                }
+                .janker-c{
+                    width: 40%;
+                    margin-left: 7%;
+                    margin-right: 5%;
+                    padding: 10px;
+                    border-left:7px solid;
+                    border-image: linear-gradient(blue, cyan ) ;
+                    border-image-slice: 1;
+                    box-shadow: 10px 10px 40px gray;
+                    border-radius: 20px;
+                }
+
                 .janker img{
                         width: 80%;
                 }
@@ -39,3 +70,11 @@ body{
                          background-repeat: no-repeat;
                          background-position: right;
                      }
+            .experiences{
+                background-image: url(images/exp-bg.png);
+                background-repeat: no-repeat;
+                background-position: left;
+            }
+            footer p{
+                text-align: center;
+            }
